--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="app">
-    <button type="button" (click)="signInWithGoogle()">Login</button>
+    <app-header></app-header>
+    <main>
+        
+    </main>
 </div>
