--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="app">
     <app-header></app-header>
     <main>
-        
+        <router-outlet></router-outlet>
     </main>
 </div>
