Added desgin for the chat container, added the chat service methods

--- a/src/app/components/chat-container/chat-container.component.html
+++ b/src/app/components/chat-container/chat-container.component.html
@@ -1,1 +1,13 @@
-<p>chat-container works!</p>
+<div class="chat-container">
+    <div class="chat-container__room-list" *ngIf="rooms$ | async as rooms">
+        <app-room-list [rooms]="rooms"></app-room-list>
+    </div>
+
+    <div class="chat-container__chat">
+        <h3>Chat</h3>
+    </div>
+
+    <div class="chat-container__add-room">
+        <button type="button" mat-raised-button color="primary">Add room</button>
+    </div>
+</div>
