Added get room messages, send messages to the right component, routing and navigation

--- a/src/app/components/chat-container/chat-container.component.html
+++ b/src/app/components/chat-container/chat-container.component.html
@@ -3,8 +3,8 @@
         <app-room-list [rooms]="rooms"></app-room-list>
     </div>
 
-    <div class="chat-container__chat">
-        <h3>Chat</h3>
+    <div class="chat-container__chat" *ngIf="messages$ | async as messages">
+        <app-chat [messages]="messages"></app-chat>
     </div>
 
     <div class="chat-container__add-room">
