--- a/src/app/components/room-list/room-list.component.html
+++ b/src/app/components/room-list/room-list.component.html
@@ -1,5 +1,5 @@
 <div class="rooms">
-    <mat-selection-list>
-        <mat-list-option *ngFor="let room of rooms" [value]="room">{{room.roomName}}</mat-list-option>
+    <mat-selection-list [multiple]="false">
+        <mat-list-option *ngFor="let room of rooms" [value]="room" [routerLink]="['/chat', room.id]">{{room.roomName}}</mat-list-option>
     </mat-selection-list>
 </div>
