Added 'add new room' feature,

--- a/src/app/components/chat-container/chat-container.component.html
+++ b/src/app/components/chat-container/chat-container.component.html
@@ -8,6 +8,6 @@
     </div>
 
     <div class="chat-container__add-room">
-        <button type="button" mat-raised-button color="primary">Add room</button>
+        <button type="button" mat-raised-button color="primary" (click)="openAddRoomModal()">Add room</button>
     </div>
 </div>
