Sending messages according to user id and room id

--- a/src/app/components/chat-container/chat-container.component.html
+++ b/src/app/components/chat-container/chat-container.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="chat-container__chat" *ngIf="messages$ | async as messages">
-        <app-chat [messages]="messages"></app-chat>
+        <app-chat [messages]="messages" (onSendMessage)="onSendMessage($event)"></app-chat>
     </div>
 
     <div class="chat-container__add-room">
