Only displayed the message's body

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,7 +1,7 @@
 <div class="chat" *ngIf="messages">
     <div class="chat__messages">
         <div class="chat__message" *ngFor="let message of messages">
-            {{ message | json }}
+            {{ message.body | json }}
         </div>
     </div>
     <div class="chat__form">
