--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -7,7 +7,10 @@
             <div id="screen">
                 <div class="chat__messages">
                     <cdk-virtual-scroll-viewport #virtualScroll appendOnly itemSize="15" class="chat__scroller">
-                        <div *cdkVirtualFor="let message of messages" class="chat__message">{{message.body}}</div>
+                        <div *cdkVirtualFor="let message of messages" class="chat__message" 
+                        [ngClass]="{'chat__message--current-user': userId === message.userId,
+                                    'chat__message--other-user': userId !== message.userId}">
+                        {{message.body}}</div>
                     </cdk-virtual-scroll-viewport>
                 </div>
                 <div class="chat__form">
